deploy/kustomize/overlays/demo-prod/delete-approval-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golden-path-agent-approval
$patch: delete
