deploy/kustomize/overlays/demo-prod/delete-approval-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golden-path-agent-approval
$patch: delete
