deploy/kustomize/overlays/demo-prod/delete-approval-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golden-path-agent-approval
$patch: delete
